--- a/tasks.ipynb
+++ b/tasks.ipynb
@@ -1,18 +1,79 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "  "
+    "## Task 1: Permutations and Combinations\n",
+    "Suppose we alter the Lady Tasting Tea experiment to involve twelve cups of tea. Six have the milk in first and the other six having tea in first. A person claims they have the special power of being able to tell whether the tea or the milk went into a cup first upon tasting it. You agree to accept their claim if they can tell which of the six cups in your experiment had the milk in first.\n",
+    "\n",
+    "Calculate, using Python, the probability that they select the correct six cups. Here you should assume that they have no special powers in figuring it out, that they are just guessing. Remember to show and justify your workings in code and MarkDown cells.\n",
+    "\n",
+    "Suppose, now, you are willing to accept one error. Once they select the six cups they think had the milk in first, you will give them the benefit of the doubt should they have selected at least five of the correct cups. Calculate the probability, assuming they have no special powers, that the person makes at most one error.\n",
+    "\n",
+    "Would you accept two errors? Explain."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.014285714285714285"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import math\n",
+    "\n",
+    "# Total amount of cups\n",
+    "total_cups = 12\n",
+    "# Cups with milk first\n",
+    "cups_with_milk_first = 6\n",
+    "\n",
+    "# Total ways to get the 6 cups from 12 \n",
+    "total_ways = math.comb(total_cups, cups_with_milk_first)\n",
+    "\n",
+    "# There is only one specific combination of the correct cups with all milk first\n",
+    "all_milk_first_cups_solution = 1\n",
+    "\n",
+    "# calculate probability of selecting the correct 6 cups\n",
+    "all_milk_cups_first_probability = all_milk_first_cups_solution / total_ways\n",
+    "\n",
+    "# Print Probability of all milk cups\n",
+    "all_milk_cups_first_probability"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "base",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
