added Tea Task scenario of 1 error max

--- a/tasks.ipynb
+++ b/tasks.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,12 +56,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Total ways to get the 6 cups from 12 \n",
-    "total_ways = math.comb(total_cups, cups_with_milk_first)"
+    "total_combinations = math.comb(total_cups, cups_with_milk_first)"
    ]
   },
   {
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +92,7 @@
     "all_milk_first_cups_solution = 1\n",
     "\n",
     "# calculate probability of selecting the correct 6 cups\n",
-    "all_milk_cups_first_probability = all_milk_first_cups_solution / total_ways\n"
+    "all_milk_cups_first_probability = all_milk_first_cups_solution / total_combinations\n"
    ]
   },
   {
@@ -104,20 +104,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The probability of all 6 cups being chosen is 0.0010822510822510823\n"
+      "The probability of 6 correct cups being chosen is 0.0010822510822510823\n"
      ]
     }
    ],
    "source": [
     "# Print Probability of all milk cups\n",
-    "print(\"The probability of all 6 cups being chosen is\",all_milk_cups_first_probability)"
+    "print(\"The probability of 6 correct cups being chosen is\",all_milk_cups_first_probability)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now, let's look at probability of the scenario where we would accept at least 1 error when selecting the correct cups."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Earlier we saw the total combinations to be math.comb(12, 6).\n",
+    "\n",
+    "Now the total combinations will become existing math.comb(12, 6)  +  whatever the possible combination of the other senario is.\n",
+    "\n",
+    "This other senario would the be math.comb(6, 5) * math.comb(6, 1)  e.g choosing 5 correct cups and 1 incorrect cup. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# combinations for 1 error\n",
+    "one_error_milk_first_cups_solution = math.comb(6, 5) * math.comb(6, 1)\n",
+    "\n",
+    "# total combinations of outcomes we would want\n",
+    "combined_outcomes = all_milk_first_cups_solution + one_error_milk_first_cups_solution\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now that we have all our outcomes, let's calculate the probability of select at least 5 of the milk first cups!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The probability of at least 5 correct cups being chosen is 0.04004329004329004\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Probability of at most one error\n",
+    "one_error_max_probability = combined_outcomes / total_combinations\n",
+    "\n",
+    "print(\"The probability of at least 5 correct cups being chosen is\", one_error_max_probability)"
    ]
   }
  ],
