Task 2 - create sample data

--- a/tasks.ipynb
+++ b/tasks.ipynb
@@ -33,16 +33,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "import math\n",
     "\n",
     "# Total amount of cups\n",
-    "total_cups = 12\n",
+    "total_cups = 8\n",
     "# Cups with milk first\n",
-    "cups_with_milk_first = 6\n"
+    "cups_with_milk_first = 4\n"
    ]
   },
   {
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,14 +104,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The probability of 6 correct cups being chosen is 0.0010822510822510823\n"
+      "The probability of 6 correct cups being chosen is 0.014285714285714285\n"
      ]
     }
    ],
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,14 +160,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The probability of at least 5 correct cups being chosen is 0.04004329004329004\n"
+      "The probability of at least 5 correct cups being chosen is 0.5285714285714286\n"
      ]
     }
    ],
@@ -192,6 +192,109 @@
     "I would say no. The reason is that having the option to have 2 errors makes the process significantly easier in terms of probability. Just look at the difference in probability between guessing all 6 correct (0.001) vs 5 correct (0.04). The probability greatly increases when the option of 1 error is introduced. \n",
     "\n",
     "This would further be increased when we up to error count to 2. At that point it may get hard to differenciate between the person knowing the milk was added first vs them purely guessing the answer."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "------------------------------\n",
+    "\n",
+    "--------------------------\n",
+    "\n",
+    "----------------------------"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Task 2: numpy's Normal Distribution\n",
+    "In this task you will assess whether numpy.random.normal() properly generates normal values. To begin, generate a sample of one hundred thousand values using the function with mean 10.0 and standard deviation 3.0.\n",
+    "\n",
+    "Use the scipy.stats.shapiro() function to test whether your sample came from a normal distribution. Explain the results and output.\n",
+    "\n",
+    "Plot a histogram of your values and plot the corresponding normal distribution probability density function on top of it."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "------------------------------"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "First, we will need import any nescessary packages:\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now, let's generate 100,000 values with mean = 10.0 and standard deviation 3.0.\n",
+    "\n",
+    "See python docs for more info: https://numpy.org/doc/stable/reference/random/generated/numpy.random.normal.html "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mean = 10.0\n",
+    "std_dev =  3.0\n",
+    "size = 100000\n",
+    "\n",
+    "# create sample data\n",
+    "data = np.random.normal(mean, std_dev, size)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The values have been generated. Let's take a quick look at the stats from the data:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The mean is :  10.005419949111076\n",
+      "The Standard Deviation is :  3.006139359559094\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('The mean is : ', np.mean(data))\n",
+    "\n",
+    "print(\"The Standard Deviation is : \", np.std(data))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can see the values above are very close to the initially defined values for the mean and standard deviation."
    ]
   }
  ],
