added Shapiro Test and analysis

--- a/tasks.ipynb
+++ b/tasks.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 409,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 410,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 411,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 412,
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 413,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 414,
    "metadata": {},
    "outputs": [
     {
@@ -228,33 +228,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "First, we will need import any nescessary packages:\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Now, let's generate 100,000 values with mean = 10.0 and standard deviation 3.0.\n",
+    "First, let's generate 100,000 values with mean = 10.0 and standard deviation 3.0.\n",
     "\n",
     "See python docs for more info: https://numpy.org/doc/stable/reference/random/generated/numpy.random.normal.html "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 415,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import numpy as np\n",
+    "\n",
     "mean = 10.0\n",
     "std_dev =  3.0\n",
     "size = 100000\n",
@@ -272,15 +258,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 416,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The mean is :  10.005419949111076\n",
-      "The Standard Deviation is :  3.006139359559094\n"
+      "The mean is :  9.980569504532099\n",
+      "The Standard Deviation is :  3.000294546006145\n"
      ]
     }
    ],
@@ -295,6 +281,76 @@
    "metadata": {},
    "source": [
     "We can see the values above are very close to the initially defined values for the mean and standard deviation."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Next, let's test whether our sample came from a normal distribution. We can do this by using a Shapiro-Wilk test.\n",
+    "\n",
+    "https://docs.scipy.org/doc/scipy/reference/generated/scipy.stats.shapiro.html#shapiro "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 417,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ShapiroResult(statistic=0.9999855756759644, pvalue=0.9890644550323486)"
+      ]
+     },
+     "execution_count": 417,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from scipy import stats\n",
+    "\n",
+    "# Perform the Shapiro Wilk test.\n",
+    "stats.shapiro(data)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now that we have the results from the test, let's discuss how they would be interpeted.\n",
+    "\n",
+    "We have 2 values: Statistic and P-Value.\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### *Statistic*\n",
+    "This measures how closely the sample distribution links to a normal distribution. The range is 0 - 1. The close the statistic is to 1, the closer it is to a normal distribution. The closer to 0 suggests a higher deviation than normal.\n",
+    "\n",
+    "##### *P-Value*\n",
+    "The p-value represents the probability of observing the test statistic under the null hypothesis, which states that the sample is drawn from a normal distribution.  The range is 0 - 1. Commonly, the p-value significance level is taken to be 0.05. If the p-value from the Shapiro-Wilk test is below 0.05, we would reject the null hypothesis and say the sample is not from a normal distribution.\n",
+    "\n",
+    "If the p-value is greater or equal to 0.05, you would fail to reject the null hypothesis as this suggests there isn't enough evidence to say the sample isn't from a normal distribution.\n",
+    "\n",
+    "P-Value and Statistic are used together to evaluate the sample. A high statistic and a high p-value suggest normality, wheras a low statistic and a low p-value suggest a deviation from normality.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "----------------------\n",
+    "----------------------\n",
+    "----------------------"
    ]
   }
  ],
