add Plantgrowth data description

--- a/project.ipynb
+++ b/project.ipynb
@@ -11,12 +11,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "First, let's import the dataset and take a look at the data!"
+    "The PlantGrowth dataset consists of 30 observations of plant weights under three different treatment groups:\n",
+    "\n",
+    "Variables:\n",
+    "\n",
+    "* rownames: The row number\n",
+    "* weight: The weight of the plant (in grams).\n",
+    "* group: Treatment group\n",
+    "\n",
+    "There are 10 plants in each group: 10 in ctrl (control), 10 in trt1 (treatment 1), and 10 in trt2 (treatment 2)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now, let's import the dataset and take a look at the data!"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +104,7 @@
        "4         5    4.50  ctrl"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -111,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -196,13 +211,33 @@
        "max    30.000000   6.310000"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "plant_data.describe()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## T-Test"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A t-test is a statistical test used to compare the means of two groups and determine if their difference is statistically significant.  The t-test calculates a t-statistic, which is the difference between the group means divided by the variability in the data. There are some assumptions when using t-tests:\n",
+    "\n",
+    "* Normality: The data (or differences in paired data) should be approximately normally distributed.\n",
+    "* Independence: Observations in each group must be independent (for independent t-tests).\n",
+    "* Equal Variance: For independent t-tests, the groups should have roughly equal variances.\n",
+    "\n",
+    "\n"
    ]
   }
  ],
