add t-test to plantgrowth project

--- a/project.ipynb
+++ b/project.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -238,6 +238,60 @@
     "* Equal Variance: For independent t-tests, the groups should have roughly equal variances.\n",
     "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's perform a t-test on the PlantGrowth data to determine whether there is a significant difference between the two treatment groups trt1 and trt2."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "t-statistic: -3.0100985421243616\n",
+      "p-value: 0.0075184261182198574\n"
+     ]
+    }
+   ],
+   "source": [
+    "import scipy.stats as stats\n",
+    "\n",
+    "df = pd.DataFrame(plant_data)\n",
+    "\n",
+    "# find the weights for trt1 and trt2\n",
+    "trt1_weights = df[df['group'] == 'trt1']['weight']\n",
+    "trt2_weights = df[df['group'] == 'trt2']['weight']\n",
+    "\n",
+    "# t-test between trt1 and trt2\n",
+    "t_statistic, p_value = stats.ttest_ind(trt1_weights, trt2_weights)\n",
+    "\n",
+    "print(f\"t-statistic: {t_statistic}\")\n",
+    "print(f\"p-value: {p_value}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The t-statistic: -3.0100985421243616\n",
+    "\n",
+    "This indicates that the mean plant weight in trt1 is approx 3 standard errors lower than in trt2.\n",
+    "\n",
+    "p-value: 0.0075184261182198574\n",
+    "\n",
+    "Since the p-value is less than 0.05, we reject the null hypothesis and conclude there is a significant difference between the two groups.\n",
+    "\n",
+    "Conclusion:\n",
+    "\n",
+    "There is a statistically significant difference between trt1 and trt2, with trt1 having a lower mean plant weight than trt2."
    ]
   }
  ],
