rename data csv to use lower case letters

--- a/project.ipynb
+++ b/project.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -112,7 +112,7 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "plant_data = pd.read_csv('data_files/PlantGrowth.csv')\n",
+    "plant_data = pd.read_csv('data_files/plantgrowth.csv')\n",
     "\n",
     "plant_data.head()\n"
    ]
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -211,7 +211,7 @@
        "max    30.000000   6.310000"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -281,11 +281,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The t-statistic: -3.0100985421243616\n",
+    "The t-statistic: -3.01\n",
     "\n",
-    "This indicates that the mean plant weight in trt1 is approx 3 standard errors lower than in trt2.\n",
+    "This indicates that the mean plant weight in trt1 is 3.01 standard errors lower than in trt2.\n",
     "\n",
-    "p-value: 0.0075184261182198574\n",
+    "p-value: 0.0075\n",
     "\n",
     "Since the p-value is less than 0.05, we reject the null hypothesis and conclude there is a significant difference between the two groups.\n",
     "\n",
