--- a/tasks.ipynb
+++ b/tasks.ipynb
@@ -550,6 +550,100 @@
     "----------------\n",
     "----------------"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Task 4: ANOVA\n",
+    "\n",
+    "In this test we will estimate the probability of committing a type II error in specific circumstances. To begin, create a variable called no_type_ii and set it to 0.\n",
+    "\n",
+    "Now use a loop to perform the following test 10,000 times.\n",
+    "\n",
+    "1:\n",
+    "Use numpy.random.normal to generate three samples with 100 values each. Give each a standard deviation of 0.1. Give the first sample a mean of 4.9, the second a mean of 5.0, and the third a mean of 5.1.\n",
+    "\n",
+    "2:\n",
+    "Perform one-way anova on the three samples and add 1 to no_type_ii whenever a type II error occurs.\n",
+    "\n",
+    "Summarize and explain your results."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "--------------------------"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "First, we will generate 3 samples of 100 values. And we will loop this 10,000 times."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "from scipy import stats\n",
+    "\n",
+    "no_type_ii = 0\n",
+    "\n",
+    "# Loop 10,000 times for groups of 100 \n",
+    "for _ in range(10000):\n",
+    "    group1 = np.random.normal(4.9, 0.1, 100)\n",
+    "    group2 = np.random.normal(5.0, 0.1, 100)\n",
+    "    group3 = np.random.normal(5.1, 0.1, 100)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now, let's perform One Way ANOVA on the samples:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Probability of committing a Type II error is 0%\n"
+     ]
+    }
+   ],
+   "source": [
+    "# ANOVA \n",
+    "f_statistic, p_value = stats.f_oneway(group1, group2, group3)\n",
+    "    \n",
+    "#check if a Type II error occurred\n",
+    "if p_value >= 0.05:\n",
+    "    no_type_ii += 1\n",
+    "\n",
+    "print(f\"Probability of committing a Type II error is {no_type_ii}%\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The probability of a Type II error is is 0%. \n",
+    "This means that every time the ANOVA test was run, it correctly rejected the null hypothesis when it should have. This indicates that there were significant differences between the means of the sample groups. \n",
+    "This suggests that the statistical power of the test in this case was sufficient to detect even the small differences between the means.\n",
+    "\n",
+    "Given the sample size and standard deviation, the ANOVA test worked as expected in detecting these small differences in means."
+   ]
   }
  ],
  "metadata": {
