add ANOVA to project

--- a/project.ipynb
+++ b/project.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -104,7 +104,7 @@
        "4         5    4.50  ctrl"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -211,7 +211,7 @@
        "max    30.000000   6.310000"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -292,6 +292,68 @@
     "Conclusion:\n",
     "\n",
     "There is a statistically significant difference between trt1 and trt2, with trt1 having a lower mean plant weight than trt2."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## ANOVA"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's perform ANOVA to determine whether there is a significant difference between the three treatment groups"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "f-statistic: 4.846087862380136\n",
+      "p-value: 0.0159099583256229\n"
+     ]
+    }
+   ],
+   "source": [
+    "from scipy import stats\n",
+    "\n",
+    "# group the weights of each plant type\n",
+    "ctrl = plant_data[plant_data['group'] == 'ctrl']['weight']\n",
+    "trt1 = plant_data[plant_data['group'] == 'trt1']['weight']\n",
+    "trt2 = plant_data[plant_data['group'] == 'trt2']['weight']\n",
+    "\n",
+    "# Perform one-way ANOVA\n",
+    "f_statistic, p_value = stats.f_oneway(ctrl, trt1, trt2)\n",
+    "\n",
+    "# Output results\n",
+    "print(f\"f-statistic: {f_statistic}\")\n",
+    "print(f\"p-value: {p_value}\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's analyse the results.\n",
+    "\n",
+    "F-statistic: 4.8461\n",
+    "\n",
+    "The f-statistic is a ratio of the variance between the group means to the variance within the groups. \n",
+    "\n",
+    "A higher f-statistic generally suggests a larger difference between the group means relative to the variability within the groups.\n",
+    "The F-statistic of 4.8461 suggests that there is some evidence that the group means differ, but we need to look at the p-value to confirm if this difference is statistically significant.\n",
+    "\n",
+    "The p-value is approx 0.016.\n",
+    "\n",
+    "Since the p-value is less than 0.05, we reject the null hypothesis and conclude there is a significant difference between the two groups."
    ]
   }
  ],
