add ANOVA vs t-test analysis

--- a/project.ipynb
+++ b/project.ipynb
@@ -355,6 +355,23 @@
     "\n",
     "Since the p-value is less than 0.05, we reject the null hypothesis and conclude there is a significant difference between the two groups."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "ANOVA is more appropriate than using several t-tests when analyzing more than 2 groups.\n",
+    "\n",
+    "The reasons for this is as follows:\n",
+    "\n",
+    "Type I error control: ANOVA controls the overall Type I error rate when comparing more than two groups, while multiple t-tests increase the likelihood of Type I errors as more tests are performed.\n",
+    "\n",
+    "Efficiency: ANOVA allows for the simultaneous comparison of multiple groups in one test, whereas multiple t-tests become increasingly inefficient as the number of groups increases.\n",
+    "\n",
+    "Comprehensive analysis: ANOVA tests for overall differences between all groups at once, while multiple t-tests only compare pairs of groups.\n",
+    "\n",
+    "Post-hoc tests: After ANOVA, post-hoc tests can identify which specific groups differ, and these tests are designed to adjust for multiple comparisons, unlike t-tests which don't provide this built-in correction."
+   ]
   }
  ],
  "metadata": {
