refactor project.ipynb

--- a/project.ipynb
+++ b/project.ipynb
@@ -26,12 +26,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now, let's import the dataset and take a look at the data!"
+    "Let's import all the packages we need for this project."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import scipy.stats as stats"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here is some info on the data."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -104,14 +121,12 @@
        "4         5    4.50  ctrl"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "import pandas as pd\n",
-    "\n",
     "plant_data = pd.read_csv('data_files/plantgrowth.csv')\n",
     "\n",
     "plant_data.head()\n"
@@ -126,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -211,7 +226,7 @@
        "max    30.000000   6.310000"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -249,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -262,8 +277,6 @@
     }
    ],
    "source": [
-    "import scipy.stats as stats\n",
-    "\n",
     "df = pd.DataFrame(plant_data)\n",
     "\n",
     "# find the weights for trt1 and trt2\n",
@@ -310,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -323,8 +336,6 @@
     }
    ],
    "source": [
-    "from scipy import stats\n",
-    "\n",
     "# group the weights of each plant type\n",
     "ctrl = plant_data[plant_data['group'] == 'ctrl']['weight']\n",
     "trt1 = plant_data[plant_data['group'] == 'trt1']['weight']\n",
@@ -353,7 +364,7 @@
     "\n",
     "The p-value is approx 0.016.\n",
     "\n",
-    "Since the p-value is less than 0.05, we reject the null hypothesis and conclude there is a significant difference between the two groups."
+    "Since the p-value is less than 0.05, we reject the null hypothesis."
    ]
   },
   {
@@ -368,9 +379,7 @@
     "\n",
     "Efficiency: ANOVA allows for the simultaneous comparison of multiple groups in one test, whereas multiple t-tests become increasingly inefficient as the number of groups increases.\n",
     "\n",
-    "Comprehensive analysis: ANOVA tests for overall differences between all groups at once, while multiple t-tests only compare pairs of groups.\n",
-    "\n",
-    "Post-hoc tests: After ANOVA, post-hoc tests can identify which specific groups differ, and these tests are designed to adjust for multiple comparisons, unlike t-tests which don't provide this built-in correction."
+    "Comprehensive analysis: ANOVA tests for overall differences between all groups at once, while multiple t-tests only compare pairs of groups."
    ]
   }
  ],
