update csv name

--- a/project.ipynb
+++ b/project.ipynb
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +127,7 @@
     }
    ],
    "source": [
-    "plant_data = pd.read_csv('data_files/plantgrowth.csv')\n",
+    "plant_data = pd.read_csv('data_files/plant_growth.csv')\n",
     "\n",
     "plant_data.head()\n"
    ]
